# thp-project-Altair-Rostam

./: .gitignore  Dockerfile  Makefile  conftest.py  coverage.json  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml  task.md
core/: asgi.py  settings.py  urls.py
templates/: profile.html  todo.html
todo/: consumers.py  fixtures.py  models.py  routing.py  urls.py  utils.py  views.py
todo/api/: api_test.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_remove_todo_user.py  0003_todo_user.py
todo/tests/: api_test.py  view_test.py
