[tool.poetry]
name = "blankon-test"
version = "0.1.0"
description = ""
authors = ["Altair Rostam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.4.4"
testcontainers = "^4.4.0"
django = "^5.0.6"
djangorestframework = "^3.15.1"
psycopg = {extras = ["binary"], version = "^3.1.19"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
